crates/test-generator/tests/snapshots/rust/test_generated_captured_pattern.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
match x2 { y1 @ Some(_) => y1 }

AST:
(source_file
  (expression_statement
    (match_expression
      value: (identifier "x2")
      body: (match_block
        (match_arm
          pattern: (match_pattern
            (captured_pattern
              (identifier "y1")
              (tuple_struct_pattern
                type: (identifier "Some")
              )
            )
          )
          value: (identifier "y1")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:12 to 1:14 }, name: "y1", definition_type: VariableDefinition, scope_id: Some(2), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:7 to 1:9 }, name: "x2", kind: Identifier, context: None },
        Usage { position: { 1:12 to 1:14 }, name: "y1", kind: Identifier, context: None },
        Usage { position: { 1:17 to 1:21 }, name: "Some", kind: Identifier, context: None },
        Usage { position: { 1:28 to 1:30 }, name: "y1", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
