crates/test-generator/tests/snapshots/rust/test_generated_closure_expression.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
let closure = |x3| x3 + y2;

AST:
(source_file
  (let_declaration
    pattern: (identifier "closure")
    value: (closure_expression
      parameters: (closure_parameters
        (identifier "x3")
      )
      body: (binary_expression
        left: (identifier "x3")
        right: (identifier "y2")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "closure",
            position: Position {
                start_line: 1,
                start_column: 5,
                end_line: 1,
                end_column: 12,
            },
            definition_type: VariableDefinition,
        },
        Definition {
            name: "x3",
            position: Position {
                start_line: 1,
                start_column: 16,
                end_line: 1,
                end_column: 18,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "x3",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 20,
                end_line: 1,
                end_column: 22,
            },
            context: None,
        },
        Usage {
            name: "y2",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 25,
                end_line: 1,
                end_column: 27,
            },
            context: None,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
