crates/test-generator/tests/snapshots/rust/test_generated_const_item.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
const CONST: i32 = 42;

AST:
(source_file
  (const_item
    name: (identifier "CONST")
    type: (primitive_type "i32")
    value: (integer_literal "42")
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "CONST",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 12,
            },
            definition_type: ConstDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
