crates/test-generator/tests/snapshots/rust/test_generated_continue_expression.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
'label1: loop { continue 'label1; }

AST:
(source_file
  (expression_statement
    (loop_expression
      (label
        (identifier "label1")
      )
      body: (block
        (expression_statement
          (continue_expression
            (label
              (identifier "label1")
            )
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage { position: { 1:2 to 1:8 }, name: "label1", kind: Identifier, context: None },
        Usage { position: { 1:27 to 1:33 }, name: "label1", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
