crates/test-generator/tests/snapshots/rust/test_generated_declaration_statement.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
let var = source;

AST:
(source_file
  (let_declaration
    pattern: (identifier "var")
    value: (identifier "source")
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "var",
            position: Position {
                start_line: 1,
                start_column: 5,
                end_line: 1,
                end_column: 8,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "source",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 11,
                end_line: 1,
                end_column: 17,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
