crates/test-generator/tests/snapshots/rust/test_generated_enum_item.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
enum TestEnum { Variant(i32) }

AST:
(source_file
  (enum_item
    name: (type_identifier "TestEnum")
    body: (enum_variant_list
      (enum_variant
        name: (identifier "Variant")
        body: (ordered_field_declaration_list
          type: (primitive_type "i32")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:6 to 1:14 }, name: "TestEnum", definition_type: EnumDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:17 to 1:24 }, name: "Variant", definition_type: EnumVariantDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
