crates/test-generator/tests/snapshots/rust/test_generated_field_expression.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
obj.field;

AST:
(source_file
  (expression_statement
    (field_expression
      value: (identifier "obj")
      field: (field_identifier "field")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage { position: { 1:1 to 1:10 }, name: "field", kind: FieldExpression, context: Some("field_expression") },
        Usage { position: { 1:1 to 1:4 }, name: "obj", kind: Identifier, context: Some("field_expression") },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
